--- a/src/main/resources/templates/commons/bar.html
+++ b/src/main/resources/templates/commons/bar.html
@@ -12,7 +12,7 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#" th:href="@{/user/loginOut}">Sign out</a>
+            <a class="nav-link" href="#" th:href="@{/user/loginOut}">注销</a>
         </li>
     </ul>
 </nav>
