--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -56,15 +56,15 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <form th:action="@{/emp}" method="post">
                 <div class="form-group">
-                    <label>LastName</label>
+                    <label>姓名</label>
                     <input type="text" name="lastName" class="form-control" placeholder="张三">
                 </div>
                 <div class="form-group">
-                    <label>Email</label>
+                    <label>邮箱</label>
                     <input type="email" name="email" class="form-control" placeholder="132@qq.com">
                 </div>
                 <div class="form-group">
-                    <label>Gender</label><br/>
+                    <label>性别</label><br/>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="gender" value="1">
                         <label class="form-check-label">男</label>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>department</label>
+                    <label>部门</label>
                     <!--提交的是部门id-->
                     <select class="form-control" name="department.id">
                         <option th:each="dept:${depts}" th:text="${dept.departmentName}" th:value="${dept.id}">1
@@ -83,7 +83,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Birth</label>
+                    <label>生日</label>
                     <input type="date" name="birth" class="form-control"/>
                 </div>
                 <button type="submit" class="btn btn-primary">添加</button>
