--- a/src/main/resources/templates/emp/update.html
+++ b/src/main/resources/templates/emp/update.html
@@ -56,15 +56,15 @@
             <form th:action="@{/updateEmp}" method="post">
                 <input name="id" type="hidden" class="form-control" th:value="${emp.id}">
                 <div class="form-group">
-                    <label>LastName</label>
+                    <label>姓名</label>
                     <input name="lastName" type="text" class="form-control" th:value="${emp.lastName}">
                 </div>
                 <div class="form-group">
-                    <label>Email</label>
+                    <label>邮箱</label>
                     <input name="email" type="email" class="form-control" th:value="${emp.email}">
                 </div>
                 <div class="form-group">
-                    <label>Gender</label><br/>
+                    <label>性别</label><br/>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="gender" value="1"
                                th:checked="${emp.gender==1}">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>department</label>
+                    <label>部门</label>
                     <!--提交的是部门的ID-->
                     <select class="form-control" name="department.id">
                         <option th:selected="${dept.id == emp.department.id}" th:each="dept:${depts}"
@@ -86,7 +86,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Birth</label>
+                    <label>生日</label>
                     <input name="birth" type="date" class="form-control"
                            th:value="${#dates.format(emp.birth,'yyyy-MM-dd')}">
                 </div>
