--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -42,12 +42,12 @@
 </head>
 
 <body>
-<!--引入topbar-->
+<!--引入topbar(片段名的形式)-->
 <div th:replace="~{commons/bar::topbar}"></div>
 
 <div class="container-fluid">
     <div class="row">
-        <!--引入sidebar-->
+        <!--引入sidebar(id 的形式)-->
         <div th:replace="~{commons/bar::#sidebar(activeUrl='main.html')}"></div>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
